--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,21 @@
 }
 
 header {
-    background-color: var(--header-bg-color);
-    color: var(--text-white);
+  background-color: var(--header-bg-color);
+  color: var(--text-white);
+}
+
+
+.container-search {
+  background-color: purple;
+}
+
+.container-weather {
+  background-color: red;
+}
+
+
+.custom-card {
+  width: 20%;
+  height: auto;
 }
