--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,11 @@ header {
   color: var(--text-white);
 }
 
+.custom-section {
+  display: flex;
+  flex-direction: column;
+}
+
 ul {
   list-style-type: none;
 }
@@ -24,22 +29,50 @@ ul > a {
   background-color: var(--text-white);
 }
 
-/* .container-search {
-  background-color: darkorchid;
+.container-search {
+  width: 100%;
 }
 
 .container-weather {
-  background-color: red;
-} */
-
+  width: 100%;
+}
 
 .custom-card {
-  width: 20%;
+  width: 100%;
   height: auto;
+  margin: 0;
+}
+
+#forecast {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  
+  .custom-section,
+  .container-forecast {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #forecast .card {
+    width: 25%;
+    margin: 5px;
+  }
+
+  .container-search {
+    width: 25%;
+  }
 }
 
 
 @media (prefers-color-scheme: dark) {
+
+  hr {
+    color: white;
+  }
+
   .custom-body {
     background-color: var(--bg-dark);
   }
