--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,10 @@ ul > a {
   margin: 0;
 }
 
+.button-load-city {
+  max-width: 80%;
+}
+
 .custom-close {
   position: absolute;
   left: 10px;
@@ -69,6 +73,10 @@ ul > a {
 
   .container-search {
     width: 25%;
+  }
+
+  .button-load-city {
+    max-width: 65%;
   }
 }
 
